<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insecure_set_result"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>
            <Button
                android:id="@+id/insecure_set_result_basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basic"/>
            <Button
                android:id="@+id/insecure_set_result_implicit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/implicit"/>
            <Button
                android:id="@+id/insecure_set_result_deeplink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deeplink"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intent_redirection"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>
            <Button
                android:id="@+id/intent_redirection_basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basic"/>
            <Button
                android:id="@+id/intent_redirection_basic_deeplink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basic_deeplink"/>
            <Button
                android:id="@+id/intent_redirection_implicit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/implicit"/>
            <Button
                android:id="@+id/intent_redirection_deeplink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deeplink"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unsafe_intent_uri"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>
            <Button
                android:id="@+id/unsafe_intent_uri_component_basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/component_basic"/>
            <Button
                android:id="@+id/unsafe_intent_uri_component_implicit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/component_implicit"/>
            <Button
                android:id="@+id/unsafe_intent_uri_webview_basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/webview_basic"/>
            <Button
                android:id="@+id/unsafe_intent_uri_webview_basic_deeplink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/webview_basic_deeplink"/>
            <Button
                android:id="@+id/unsafe_intent_uri_webview_implicit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/webview_implicit"/>
            <Button
                android:id="@+id/unsafe_intent_uri_webview_deeplink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/webview_deeplink"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mutable_pending_intent"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>
            <Button
                android:id="@+id/enable_notification_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_notification_access"/>
            <Button
                android:id="@+id/register_receiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_receiver"/>
            <Button
                android:id="@+id/mutable_pending_intent_basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basic"/>
            <Button
                android:id="@+id/mutable_pending_intent_notif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insecure_broadcast"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>
            <Button
                android:id="@+id/insecure_broadcast_basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basic"/>
            <Button
                android:id="@+id/insecure_broadcast_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insufficient_protection"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>